--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
-@tailwind utilities; 
 
 @theme {
   --font-mont: "Montserrat", sans-serif;
@@ -13,7 +12,7 @@
               relative
          after:content-['']
          after:absolute after:left-0 after:bottom-0
-         after:h-[1px] after:w-full
+         after:h-px after:w-full
          after:origin-left after:scale-x-0
          after:bg-black
          after:transition-transform after:duration-200
